Imagenes por ahora

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mi Pagina</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1 id="nombre">JADER ANDRES SAMBONY SARRIA</h1>
+      <div id="lista1">
+        <h>Informacion</h>
+        <h>Galeria</h>
+        <h>Contacto</h>
+      </div>
+    </header> 
+    <main>
+      <section class="box-text">
+        <div class="text">
+          <p>Ingeniero de Sistemas</p>
+          <p>Full Stack</p>
+          <h3>Hola, Yo soy Jader</h3>
+        </div>
+        <div class="img">
+          <img id="img1" src="img/img1.jpg" alt="error" />
+          <img id="img2" src="img/img2.jpg" alt="" />
+        </div>
+      </section>
+
+      
+    </main>
+
+    <head> </head>
+  </body>
 </html>
