modificacion de fondo y estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Pagina</title>
+    <title>Jader Andres Sambony Sarria - Página Personal</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1 id="nombre">JADER ANDRES SAMBONY SARRIA</h1>
-      <div id="lista1">
+      <nav id="lista1">
         <h>Informacion</h>
-        <h>Galeria</h>
+        <h>Estudios</h>
         <h>Contacto</h>
-      </div>
-    </header> 
+      </nav>
+      <h1 id="nombre" >JADER ANDRES SAMBONY SARRIA</h1>
+      <h2 id="nombre1">Ingeniero de Sistemas, Full Stack</h2>
+      <p></p>
+    </header>
+
     <main>
-      <section class="box-text">
-        <div class="text">
-          <p>Ingeniero de Sistemas</p>
-          <p>Full Stack</p>
+      <section id="informacion" class="box-text">
+        <!-- <div class="text">
+          <h2>Ingeniero de Sistemas</h2>
+          <h3>Full Stack Developer</h3>
           <h3>Hola, Yo soy Jader</h3>
-        </div>
+        </div> -->
         <div class="img">
-          <img id="img1" src="img/img1.jpg" alt="error" />
-          <img id="img2" src="img/img2.jpg" alt="" />
+          <!-- <img id="img1" src="img/img1.jpg" alt="Foto familiar" /> -->
+          <!-- <img id="img2" src="img/img2.jpg" alt="Foto adicional" /> -->
+        </div>
+      </section>
+<!-- 
+      <section id="galeria">
+        <h2>Galería</h2>
+      
+        <div class="galeria-img">
+          <img src="img/gallery1.jpg" alt="Imagen galería 1" />
+          <img src="img/gallery2.jpg" alt="Imagen galería 2" />
         </div>
       </section>
 
-      
+      <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Correo: jader@ejemplo.com</p>
+        <p>Teléfono: +57 123 456 7890</p>
+        <p>Ubicación: Ciudad, País</p>
+      </section>
     </main>
 
-    <head> </head>
+    <footer>
+      <p>
+        &copy; 2024 Jader Andres Sambony Sarria. Todos los derechos reservados.
+      </p>
+    </footer> -->
   </body>
 </html>
