--- a/index.html
+++ b/index.html
@@ -7,37 +7,61 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header id="Inicio">
       <nav id="lista1">
-        <h>Informacion</h>
-        <h>Estudios</h>
-        <h>Contacto</h>
+        <a href="#Inicio">Inicio</a>
+        <a href="#informacion">Información</a>
+        <a href="#estudios">Estudios</a>
+        <a href="#contacto">Contacto</a>
       </nav>
-      <h1 id="nombre" >JADER ANDRES SAMBONY SARRIA</h1>
+      <h1 id="nombre">JADER ANDRES SAMBONY SARRIA</h1>
       <h2 id="nombre1">Ingeniero de Sistemas, Full Stack</h2>
-      <p></p>
+      <img id="fondo" src="img/img1.jpg" alt="Fondo" />
     </header>
 
     <main>
+      <section id="fotos">
+        <div class="image-slider">
+          <div class="image-wrapper">
+              <img src="img/1.png" alt="Imagen 1" />
+              <img src="img/2.png" alt="Imagen 2" />
+              <img src="img/3.png" alt="Imagen 3" />
+              <img src="img/4.png" alt="Imagen 4" />
+              <img src="img/5.png" alt="Imagen 5" />
+              <img src="img/6.png" alt="Imagen 6" />
+              <img src="img/7.png" alt="Imagen 7" />
+              <img src="img/8.png" alt="Imagen 8" />
+              <img src="img/9.png" alt="Imagen 9" />
+              <img src="img/10.png" alt="Imagen 10" />
+              <img src="img/11.png" alt="Imagen 11" />
+              <img src="img/12.png" alt="Imagen 12" />
+          </div>
+      </div>
+      </section>
       <section id="informacion" class="box-text">
-        <!-- <div class="text">
-          <h2>Ingeniero de Sistemas</h2>
-          <h3>Full Stack Developer</h3>
-          <h3>Hola, Yo soy Jader</h3>
-        </div> -->
-        <div class="img">
-          <!-- <img id="img1" src="img/img1.jpg" alt="Foto familiar" /> -->
-          <!-- <img id="img2" src="img/img2.jpg" alt="Foto adicional" /> -->
+        <div class="text">
+          <h1>Información Personal</h1>
+          <p>
+            Soy Jader, estudiante de Ingeniería de Sistemas en quinto semestre
+            con una gran pasión por el desarrollo web. He trabajado en diversos
+            proyectos, como la creación de una plataforma de e-commerce
+            utilizando React y Node.js, y el desarrollo de una aplicación móvil
+            híbrida con Flutter. Mis habilidades incluyen HTML, CSS, JavaScript,
+            React, Node.js, MongoDB y bases de datos relacionales. Estoy
+            constantemente buscando nuevos desafíos y oportunidades para
+            aprender y crecer. Mi objetivo es convertirme en un desarrollador
+            full stack completo y contribuir al desarrollo de soluciones
+            innovadoras.
+          </p>
+        </div>
+        <div id="fotoyo">
+          <img id="foto" src="img/yo.jpg" alt="Foto de perfil" width="50%" />
         </div>
       </section>
 <!-- 
-      <section id="galeria">
-        <h2>Galería</h2>
-      
-        <div class="galeria-img">
-          <img src="img/gallery1.jpg" alt="Imagen galería 1" />
-          <img src="img/gallery2.jpg" alt="Imagen galería 2" />
-        </div>
+      <section id="estudios">
+        <h2>Estudios</h2>
+        <p>Aquí va la información sobre tus estudios.</p>
       </section>
 
       <section id="contacto">
@@ -53,5 +77,9 @@
         &copy; 2024 Jader Andres Sambony Sarria. Todos los derechos reservados.
       </p>
     </footer> -->
+     <!-- Agrega el JavaScript al final del body -->
+
   </body>
+
+  
 </html>
