--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav id="lista1">
         <a href="#Inicio">Inicio</a>
         <a href="#informacion">Información</a>
-        <a href="#estudios">Estudios</a>
+        <a href="#estudioss">Estudios</a>
         <a href="#contacto">Contacto</a>
       </nav>
       <h1 id="nombre">JADER ANDRES SAMBONY SARRIA</h1>
@@ -23,20 +23,20 @@
       <section id="fotos">
         <div class="image-slider">
           <div class="image-wrapper">
-              <img src="img/1.png" alt="Imagen 1" />
-              <img src="img/2.png" alt="Imagen 2" />
-              <img src="img/3.png" alt="Imagen 3" />
-              <img src="img/4.png" alt="Imagen 4" />
-              <img src="img/5.png" alt="Imagen 5" />
-              <img src="img/6.png" alt="Imagen 6" />
-              <img src="img/7.png" alt="Imagen 7" />
-              <img src="img/8.png" alt="Imagen 8" />
-              <img src="img/9.png" alt="Imagen 9" />
-              <img src="img/10.png" alt="Imagen 10" />
-              <img src="img/11.png" alt="Imagen 11" />
-              <img src="img/12.png" alt="Imagen 12" />
+            <img src="img/1.png" alt="Imagen 1" />
+            <img src="img/2.png" alt="Imagen 2" />
+            <img src="img/3.png" alt="Imagen 3" />
+            <img src="img/4.png" alt="Imagen 4" />
+            <img src="img/5.png" alt="Imagen 5" />
+            <img src="img/6.png" alt="Imagen 6" />
+            <img src="img/7.png" alt="Imagen 7" />
+            <img src="img/8.png" alt="Imagen 8" />
+            <img src="img/9.png" alt="Imagen 9" />
+            <img src="img/10.png" alt="Imagen 10" />
+            <img src="img/11.png" alt="Imagen 11" />
+            <img src="img/12.png" alt="Imagen 12" />
           </div>
-      </div>
+        </div>
       </section>
       <section id="informacion" class="box-text">
         <div class="text">
@@ -58,10 +58,43 @@
           <img id="foto" src="img/yo.jpg" alt="Foto de perfil" width="50%" />
         </div>
       </section>
-<!-- 
-      <section id="estudios">
+
+      <section id="estudioss">
         <h2>Estudios</h2>
-        <p>Aquí va la información sobre tus estudios.</p>
+        <div class="estudios">
+          <div class="estudio">
+            <h3>Básica/Media</h3>
+            <p>
+              Mis estudios en primaria y bachillerato fueron diversos y
+              desafiantes. Debido al trabajo de mi padre, nos mudamos con
+              frecuencia a diferentes ciudades, lo que me permitió conocer
+              múltiples entornos educativos. A pesar de los constantes cambios,
+              logré culminar mis estudios de bachillerato en 2019 con un
+              desempeño constante y sin dejarme atrás por las circunstancias.
+            </p>
+          </div>
+          <div class="estudio">
+            <h3>Técnico</h3>
+            <p>
+              En 2020, decidí continuar mi formación en el SENA, donde me
+              inscribí en un programa de Técnico en Sistemas. Aunque ese año
+              presentó grandes desafíos debido a la pandemia, logré adaptarme a
+              las nuevas modalidades de estudio, completar la etapa productiva y
+              graduarme, obteniendo valiosas habilidades técnicas en el proceso.
+            </p>
+          </div>
+          <div class="estudio">
+            <h3>Superior</h3>
+            <p>
+              Actualmente, me encuentro en el quinto semestre de mi carrera
+              universitaria. Mi promedio es de 4.0, lo que refleja mi dedicación
+              y esfuerzo en cada asignatura. Estoy profundamente motivado para
+              seguir aprendiendo, investigando, y expandiendo mis conocimientos.
+              Espero culminar mis estudios superiores muy pronto y aplicar lo
+              aprendido en proyectos futuros.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section id="contacto">
@@ -76,10 +109,6 @@
       <p>
         &copy; 2024 Jader Andres Sambony Sarria. Todos los derechos reservados.
       </p>
-    </footer> -->
-     <!-- Agrega el JavaScript al final del body -->
-
+    </footer>
   </body>
-
-  
 </html>
