--- a/index.html
+++ b/index.html
@@ -35,29 +35,47 @@
             <img src="img/10.png" alt="Imagen 10" />
             <img src="img/11.png" alt="Imagen 11" />
             <img src="img/12.png" alt="Imagen 12" />
+
+            <img src="img/1.png" alt="Imagen 1" />
+            <img src="img/2.png" alt="Imagen 2" />
+            <img src="img/3.png" alt="Imagen 3" />
+            <img src="img/4.png" alt="Imagen 4" />
+            <img src="img/5.png" alt="Imagen 5" />
+            <img src="img/6.png" alt="Imagen 6" />
+            <img src="img/7.png" alt="Imagen 7" />
+            <img src="img/8.png" alt="Imagen 8" />
+            <img src="img/9.png" alt="Imagen 9" />
+            <img src="img/10.png" alt="Imagen 10" />
+            <img src="img/11.png" alt="Imagen 11" />
+            <img src="img/12.png" alt="Imagen 12" />
           </div>
         </div>
       </section>
+
       <section id="informacion" class="box-text">
-        <div class="text">
-          <h1>Información Personal</h1>
-          <p>
-            Soy Jader, estudiante de Ingeniería de Sistemas en quinto semestre
-            con una gran pasión por el desarrollo web. He trabajado en diversos
-            proyectos, como la creación de una plataforma de e-commerce
-            utilizando React y Node.js, y el desarrollo de una aplicación móvil
-            híbrida con Flutter. Mis habilidades incluyen HTML, CSS, JavaScript,
-            React, Node.js, MongoDB y bases de datos relacionales. Estoy
-            constantemente buscando nuevos desafíos y oportunidades para
-            aprender y crecer. Mi objetivo es convertirme en un desarrollador
-            full stack completo y contribuir al desarrollo de soluciones
-            innovadoras.
-          </p>
-        </div>
-        <div id="fotoyo">
-          <img id="foto" src="img/yo.jpg" alt="Foto de perfil" width="50%" />
+        <div class="text-wrapper">
+          <div class="text">
+            <h1>Información Personal</h1>
+            <p>
+              Soy Jader, estudiante de Ingeniería de Sistemas en quinto semestre
+              con una gran pasión por el desarrollo web. He trabajado en
+              diversos proyectos, como la creación de una plataforma de
+              e-commerce utilizando React y Node.js, y el desarrollo de una
+              aplicación móvil híbrida con Flutter. Mis habilidades incluyen
+              HTML, CSS, JavaScript, React, Node.js, MongoDB y bases de datos
+              relacionales. Estoy constantemente buscando nuevos desafíos y
+              oportunidades para aprender y crecer. Mi objetivo es convertirme
+              en un desarrollador full stack completo y contribuir al desarrollo
+              de soluciones innovadoras.
+            </p>
+          </div>
+          <div id="fotoyo">
+            <img id="foto" src="img/yo.jpg" alt="Foto de perfil" width="50%" />
+          </div>
         </div>
       </section>
+
+      <section id="fotosyo"></section>
 
       <section id="estudioss">
         <h2>Estudios</h2>
@@ -99,16 +117,23 @@
 
       <section id="contacto">
         <h2>Contacto</h2>
-        <p>Correo: jader@ejemplo.com</p>
+        <p>Correo: jader@gmial.com</p>
         <p>Teléfono: +57 123 456 7890</p>
-        <p>Ubicación: Ciudad, País</p>
+        <p>Ubicación: Florencia, Francia</p>
       </section>
     </main>
 
-    <footer>
-      <p>
-        &copy; 2024 Jader Andres Sambony Sarria. Todos los derechos reservados.
-      </p>
+    <footer class="footer">
+      <div class="footer-content">
+        <p>
+          &copy; 2024 Jader Andres Sambony Sarria. Todos los derechos
+          reservados.
+        </p>
+        <p>
+          Diseñado y desarrollado con <span>&hearts;</span> por Jader Andres
+          Sambony Sarria.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
