--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#estudioss">Estudios</a>
         <a href="#contacto">Contacto</a>
       </nav>
+
       <h1 id="nombre">JADER ANDRES SAMBONY SARRIA</h1>
       <h2 id="nombre1">Ingeniero de Sistemas, Full Stack</h2>
       <img id="fondo" src="img/img1.jpg" alt="Fondo" />
@@ -75,7 +76,15 @@
         </div>
       </section>
 
-      <section id="fotosyo"></section>
+      <section id="fotosyo">
+        <h1>Imagenes Relacionadas Conmigo</h1>
+        <div id="jader">
+          <img src="yo/IMG-20240905-WA0039.jpg" alt="" width="20%" />
+          <img src="yo/IMG-20240905-WA0037.jpg" alt="" width="20%" />
+          <img src="yo/IMG-20240905-WA0019.jpg" alt="" width="20%" />
+          <a href="">Ver mas...</a>
+        </div>
+      </section>
 
       <section id="estudioss">
         <h2>Estudios</h2>
