archivos creados y cargadas las fotos

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <img src="yo/IMG-20240905-WA0039.jpg" alt="" width="20%" />
           <img src="yo/IMG-20240905-WA0037.jpg" alt="" width="20%" />
           <img src="yo/IMG-20240905-WA0019.jpg" alt="" width="20%" />
-          <a href="">Ver mas...</a>
+          <a href="fotos/fotos.html">Ver mas...</a>
         </div>
       </section>
 
