--- a/fotos/fotos.html
+++ b/fotos/fotos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilofotos.css" />
   </head>
   <body>
+    <a href="../index.html" class="boton-volver">Volver</a>
     <h1>Galeria de Fotos</h1>
     <div class="galeria">
       <div class="foto">
